@@ -19,6 +19,7 @@ test_cases = [
   'test_parse_file2',
   'test_parse_file_colons',
   'test_unicode',
+  'test_multiple_attributes'
   ]
 
 foreach case : test_cases
