@@ -40,12 +40,17 @@ main (void)
     printf ("\n\
 Key: %s\n\
 Value: %s\n\
-Attribute: %s\n", list->key, list->value, list->attribute);
+Attribute: %s\n", list->key, list->value, list->attr_node->str);
 
     assert (strcmp (data[i].key, list->key) == 0);
     assert (strcmp (data[i].value, list->value) == 0);
-    assert (strcmp (data[i].attribute, list->attribute) == 0);
+    fprintf (stderr, "attr: %s\n", list->attr_node->str);
+    assert (strcmp (data[i].attribute, list->attr_node->str) == 0);
     i++;
+
+    // Free the attribute node (the root isn't needed when you know
+    // there is only one node).
+    canfigger_free_attr (list->attr_node);
 
     list = list->next;
   }
