@@ -34,13 +34,17 @@ main (void)
     printf ("\n\
 Key: %s\n\
 Value: %s\n\
-Attribute: %s\n", list->key, list->value, list->attribute);
+Attribute: %s\n", list->key, list->value, list->attr_node->str);
 
     assert (strcmp (data[i].key, list->key) == 0);
     // printf ("value = '%s' '%s'\n", data[i].value, list->value);
     assert (strcmp (data[i].value, list->value) == 0);
-    assert (strcmp (data[i].attribute, list->attribute) == 0);
+    fprintf (stderr, "attr: %s\n", list->attr_node->str);
+    assert (strcmp (data[i].attribute, list->attr_node->str) == 0);
     i++;
+
+    // free the attribute node
+    canfigger_free_attr (list->attr_node);
 
     list = list->next;
   }
