@@ -1,5 +1,9 @@
 # Canfigger ChangeLog
 
+2022-01-06
+
+  * implement support for multiple attributes (breaking change)
+
 2021-12-27
 
   * release v0.1.2
